button issue on mobile

--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -78,4 +78,7 @@
   .button--hero{
     width: 100%;
   }
+  .button--reject{
+    margin-left: -1px;
+  }
 }
